syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";
package CareerCloud.gRPC;

service SecurityLogin {
	rpc CreateSecurityLogin(SecurityLoginReply) returns (google.protobuf.Empty);
	rpc DeleteSecurityLogin(SecurityLoginReply) returns (google.protobuf.Empty);
	rpc ReadSecurityLogin(SecurityLoginRequest) returns (SecurityLoginReply);
	rpc UpdateSecurityLogin(SecurityLoginReply) returns (google.protobuf.Empty);
}

message SecurityLoginRequest {
	string id = 1;
}

message SecurityLoginReply {
	string id = 1;
	string login = 2;
	string password = 3;
	google.protobuf.Timestamp created_date = 4;
	google.protobuf.Timestamp password_update_date = 5;
	google.protobuf.Timestamp agreement_accepted = 6;
	bool is_locked = 7;
	bool is_inactive = 8;
	string email_address = 9;
	string phone_number = 10;
	string full_name = 11;
	bool force_change_password = 12;
	string prefferred_language = 13;
}